Removed reset.css & added meta tags.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <!-- Meta Data -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta keywords="blog">
+        <meta description="Add as many blogg posts as you want">
 
         <!-- JS -->
         <script src="js/main.js"></script>
+
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/styles.css">
 
         <!-- Title Bar-->
-        <title>Blogg</title>
+        <title>Blog</title>
         <link rel="shortcut icon" type="image/x-icon" href="img/title.ico"/>
+        
     </head>
 
     <body>
+        <header>
+            <h1>Interesting Blog</h1>
+        </header>
 
     </body>
 </html>
