--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
         <!-- Title Bar-->
         <title>Blog</title>
         <link rel="shortcut icon" type="image/x-icon" href="img/title.ico"/>
-        
+
     </head>
 
     <body>
         <header>
-            <h1>Interesting Blog</h1>
+            <div id="pagetitle">
+                <h1>Blog Blog Blog Blog</h1>
+            </div>            
         </header>
 
+        <footer>
+            <div id="blogCounter">
+                <label for="Input Functionname">Posts:</label>
+                <input id="inputBox">
+            </div>
+        </footer>
     </body>
 </html>
