--- a/index.html
+++ b/index.html
@@ -24,15 +24,74 @@
     <body>
         <header>
             <div id="pagetitle">
-                <h1>Blog Blog Blog Blog</h1>
+                <h1>Blog</h1>
             </div>            
         </header>
 
+        <main>
+            <div id="cards">
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1>Rubriiiik</h1>
+                    <p>Micket textttttt</p>
+                </div>
+
+            </div>
+        </main>
+
+
         <footer>
             <div id="blogCounter">
-                <label for="Input Functionname">Posts:</label>
+                <label for="inputBox">Posts:</label>
                 <input id="inputBox">
             </div>
         </footer>
     </body>
 </html>
+
+
+<!--    padding-top: 10px;
+    padding-bottom: 10px;-->
