Skeleton + text overflow fixed

--- a/index.html
+++ b/index.html
@@ -28,39 +28,61 @@
             </div>  
 
             <div id="blogCounter">
-                <label for="inputBox">Posts:</label>
+                <h1>Posts:</h1>
                 <input id="inputBox">
             </div>     
         </header>
 
         <main>
             <div id="cards">
+                <!--
                 <div id="card">
                     <h1>Rubriiiik</h1>
                     <p>Micket textttttt</p>
                 </div>
+                -->
                 <div id="card">
-                    <h1>Rubriiiik</h1>
-                    <p>Micket textttttt</p>
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
                 </div>
                 <div id="card">
-                    <h1>Rubriiiik</h1>
-                    <p>Micket textttttt</p>
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
                 </div>
                 <div id="card">
-                    <h1>Rubriiiik</h1>
-                    <p>Micket textttttt</p>
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
+                </div>
+                <div id="card">
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
                 </div>
             </div>
         </main>
 
 
         <footer>
-            
         </footer>
     </body>
 </html>
 
-
-<!--    padding-top: 10px;
-    padding-bottom: 10px;-->
