buildCards &  clearCards + css

--- a/index.html
+++ b/index.html
@@ -29,54 +29,21 @@
 
             <div id="blogCounter">
                 <h1>Posts:</h1>
-                <input id="inputBox">
+                <input id="inputBox" type="number" placeholder="0">
             </div>     
         </header>
 
         <main>
+            <script></script>
             <div id="cards">
+
                 <!--
                 <div id="card">
-                    <h1>Rubriiiik</h1>
-                    <p>Micket textttttt</p>
+                    <h1 contentEditable="true">Rubriiiik</h1>
+                    <p contentEditable="true">Micket textttttt</p>
                 </div>
                 -->
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
+               
             </div>
         </main>
 
