--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div id="blogCounter">
                 <h1>Posts:</h1>
-                <input id="inputBox" type="number" placeholder="0">
+                <input id="inputBox" type="number" placeholder="0", oninput="cardEngine()">
             </div>     
         </header>
 
