Sticky header, cleanup, maximum 100 posts

--- a/index.html
+++ b/index.html
@@ -34,16 +34,8 @@
         </header>
 
         <main>
-            <script></script>
+            <!--<script></script>-->
             <div id="cards">
-
-                <!--
-                <div id="card">
-                    <h1 contentEditable="true">Rubriiiik</h1>
-                    <p contentEditable="true">Micket textttttt</p>
-                </div>
-                -->
-               
             </div>
         </main>
 
