--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <body>
         <header>
             <div id="pagetitle">
+                <img src="img/title.ico">
                 <h1>Blog</h1>
             </div>  
 
