Html cleanup, css cardP height

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div id="blogCounter">
                 <h1>Posts:</h1>
-                <input id="inputBox" type="number" placeholder="0", oninput="cardEngine()">
+                <input id="inputBox" type="number" placeholder="0" oninput="cardEngine()">
             </div>     
         </header>
 
